# binance-aggtrades

./: .gitignore  README.md  btcusdt_net_taker_volume.csv  get_net_taker_volume.py  main.py  pyproject.toml
.prompts/: conventions.md  net_taker.md  optimize.md
src/: aggtrades_fetcher.py  aggtrades_store.py  cli.py
tests/: test_aggtrades_fetcher.py  test_aggtrades_store.py
