[tool.poetry]
name = "binance-aggtrades"
version = "0.1.0"
description = ""
authors = ["scofieldchen <scofieldchen@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
tenacity = "^9.0.0"
pyarrow = "^19.0.1"
pybloom-live = "^4.0.0"
typer = "^0.15.1"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
